# litecash-wallet

./: .gitignore  CMakeLists.txt  LICENSE  LitecashWallet.cmake  README.md
src/: cryptonotewallet.rc  resources.qrc
src/gui/ui/: aboutdialog.ui
src/images/: litecash.icns
